--- a/index.html
+++ b/index.html
@@ -375,7 +375,82 @@
     
     </ul>
     </div>
+    <div class="footer-sub">
+<p class="sub-title">Subscribe</p>
+<form class="subscribe">
+<label class="sub-label">
+    <input type="email" name="email" placeholder="E-mail" class="email-sub">
+</label>
+<button type="submit" class="sub-btn">Subscribe
+<svg width="24" height="24" class="svg-btn">
+    <use href="./images/icons.svg#icon-send"></use>
+</svg>
+</button>
+</form>
+    </div>
 </div>
     </footer>
+    <div class="modal-overlay">
+        <div class="modal is-open">
+            <button type="button" class="modal-btn">
+                <svg width="8" height="8" class="close-icon">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+            <p class="modal-title">Leave your contacts and we will call you back</p>
+            <form>
+                <div class="name-container">
+                    <label for="user-name" class="modal-label">Name</label>
+                    <div class="icon-input">
+                        <input type="text" id="user-name" name="user-name" class="modal-input">
+                        <svg width="18" height="24" class="input-logo">
+                            <use href="./images/icons.svg#icon-person"></use>
+                        </svg>
+                    </div>
+
+                </div>
+
+                <div class="name-container">
+                    <label for="user-phone" class="modal-label">Phone</label>
+                    <div class="icon-input">
+                        <input type="tel" id="user-phone" name="user-phone" class="modal-input">
+                        <svg width="18" height="24" class="input-logo">
+                            <use href="./images/icons.svg#icon-phone"></use>
+                        </svg>
+                    </div>
+
+                </div>
+
+                <div class="name-container">
+                    <label for="user-email" class="modal-label">Email</label>
+                    <div class="icon-input">
+                        <input type="email" id="user-email" name="user-email" class="modal-input">
+                        <svg width="18" height="24" class="input-logo">
+                            <use href="./images/icons.svg#icon-email"></use>
+                        </svg>
+                    </div>
+
+                </div>
+
+                <div class="textarea-cont">
+                    <label class="modal-label" for="user-comment">Comment</label>
+                    <textarea id="user-comment" name="user-comment" placeholder="Text input" class="textarea-inp"></textarea>
+                </div>
+
+                <div class="checkbox-cont">
+                    <input id="user-privacy" name="user-privacy" type="checkbox" value="true" class="visually-hidden">
+                    <label for="user-privacy" class="privacy-label"><span class="checkmark">
+                        <svg width="8" height="10" class="accept">
+                            <use href="./images/icons.svg#icon-accept"></use>
+                        </svg>
+                    </span>I accept the terms and conditions of the<a href class="priv-policy">Privacy Policy</a></label>
+                </div>
+
+                <button type="submit" class="modal-button">Send</button>
+
+            </form>
+
+        </div>
+    </div>
 </body>
 </html>
