--- a/index.html
+++ b/index.html
@@ -390,8 +390,8 @@
     </div>
 </div>
     </footer>
-    <div class="modal-overlay">
-        <div class="modal is-open">
+    <div class="modal-overlay is-open">
+        <div class="modal">
             <button type="button" class="modal-btn">
                 <svg width="8" height="8" class="close-icon">
                     <use href="./images/icons.svg#icon-close"></use>
